@@ -943,7 +943,7 @@ wchar_t StringConstant::US_smallest_int[] = {U_MINUS, U_2, U_1, U_4, U_7, U_4, U
 
 
 char StringConstant::U8S_command_format[] = "use: jikes [-classpath path][-d dir][-debug][-depend|-Xdepend][-deprecation]"
-#if defined(HAVE_LIB_ICU_UC) || defined(HAVE_ICONV_H)
+#if defined(HAVE_LIBICU_UC) || defined(HAVE_ICONV_H)
                                             "[-encoding encoding]"
 #endif
 					    "[-g][-nowarn][-nowrite][-O][-verbose][-Xstdout]"
